# doppelkopf

./: .gitignore  Cargo.toml  README.md
src/: bidding.rs  decks.rs  game.rs  game_type.rs  main.rs  player.rs  player_state.rs  reservation.rs  round.rs  round_player.rs  rule_set.rs  solo_type.rs  standard_game.rs  team.rs  trick.rs  turn.rs  turn_result.rs
