[package]
name = "doppelkopf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cardlib = { git = "https://github.com/conqp/cardlib.git", branch = "main"}
rand = "*"
uuid = { version = "*", features = ["v4"] }